network/08_ingress_traefik/01_traefik_service.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: traefik

spec:  
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 80
      nodePort: 30001
    - protocol: TCP
      name: admin
      port: 8080
      nodePort: 30002
    - protocol: TCP
      name: websecure
      port: 443
      nodePort: 30003
  selector:
    app: traefik
